[package]
name = "core-media-rs"
description = "Rust wrapper for apple's CoreMedia framework"
categories = [
  "external-ffi-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]
authors = ["Per Johansson <mail@perjohansson.net>"]
repository = "https://github.com/svtlabs/core-media-rs"
homepage = "https://github.com/svtlabs"
rust-version = "1.72"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-audio-types-rs = { git = "https://github.com/svtlabs/core-audio-types-rs.git", branch = "main" }
core-video-rs = { git = "https://github.com/svtlabs/core-video-rs.git", branch = "main" }
core-utils-rs = { path = "../core-utils-rs" }
core-foundation = "0.9"
thiserror = "1.0"
block = "0.1"
